--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "moduleResolution": "node",
         "declaration": true,
         "rootDir": "src",
-        "outDir": "dest"
+        "outDir": "dest",
+        "strict": true
     }
 }
